# wiki_fig_downloader

./: Cargo.toml  readme.md
src/: main.rs
